LB-9: навигация "Конфигурационные файлы" * добавлена конфигурация для тестов * в тесты добавлен мокированный бин LogBot, так как стандартный стучится в Интернет и ломает тесты